fixed so sticky footer works in all pages. (by wrapping everything in #globalWrapper)

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,6 +279,7 @@ html, body{height:100%;}
     height:1px;
 }
 #globalWrapper{
+    table-layout: fixed;
     display: table;
     height: 100%;
     width: 100%;
